# OCTproEngine

./: .gitignore  CMakeLists.txt  README.md  build_linux.sh  build_windows.bat  version.h.in
cmake/: CudaConfig.cmake  FindFFTW3.cmake
documentation/developer/: COMMITS.md  QUIRKS.md  VERSION_MANAGEMENT.md
examples/: example_basic.cpp
include/: export.h  iobuffer.h  processor.h  processorconfiguration.h  types.h  version.h
python/: CMakeLists.txt  octproengine_bindings.cpp  setup.py
python/examples/: example_basic.py
python/tests/: run_all_tests.py  test_backend_comparison.py  test_minimal.py  test_multi_consumer.py  test_performance_benchmark.py
src/: CMakeLists.txt
src/backends/: backend_interface.h
src/backends/cpu/: cpu_backend.cpp  cpu_backend.h  cpu_kernels.h  cpu_kernels.tpp
src/backends/cuda/: cuda_backend.cu  cuda_backend.h  cuda_kernels.cu  cuda_kernels.h
src/core/: callback_manager.cpp  callback_manager.h  iobuffer.cpp  processor.cpp  processorconfiguration.cpp  types.cpp
tests/: CMakeLists.txt  test_backend_output_comparison.cpp  test_curve_functionality.cpp  test_multi_consumer.cpp  test_performance_benchmark.cpp  test_setconfig.cpp
